@@ -1,6 +1,9 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.956 2011-04-17 23:53:24 guru Exp $
+	$Id: ChangeLog,v 1.957 2011-04-18 12:41:29 remko Exp $
 -----------------------------------------------------------------------------------------
+
+2011-04-18	remko
+	* grdsample_func.c:	Allow some slack in determining whether -R exceeds grid boundaries.
 
 2011-04-17      pwessel
 	* minmax_func.c:	Did not properly reset n records after a report.
